# trading_skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-09-kimi-trading-skills-phase1.md
docs/superpowers/specs/: 2026-07-09-kimi-trading-skills-design.md  2026-07-09-kimi-trading-skills-user-docs-design.md
docs/user/: README.md  brokers.md  commands.md  getting-started.md  reports.md  safety.md  troubleshooting.md  user-guide.md  workflows.md
scripts/: install-kimi-skill.sh  run_all_tests.sh
skills/kimi-trading-skills/: SKILL.md
skills/kimi-trading-skills/assets/schemas/: report.schema.json  thesis.schema.json
skills/kimi-trading-skills/assets/workflows/: market-regime-daily.yaml
skills/kimi-trading-skills/references/: broker-matrix.md  data-source-alternatives.md
skills/kimi-trading-skills/references/prompts/: pre-trade-discipline.md  regime-synthesis.md
src/tscli/: __main__.py  cli.py  config.py  reports.py
src/tscli/brokers/: __init__.py  base.py  manual.py
src/tscli/commands/: broker.py  market.py
tests/: test_broker_manual.py  test_cli.py  test_report.py
