[project]
name = "tscli"
version = "0.1.0"
description = "Code-first trading assistant CLI"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.25.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff==0.9.6",
]

[project.scripts]
tscli = "tscli.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
